# ffss

./: .gitignore  .gitmodules  CMakeLists.txt  FFSS.dsw  LICENSE  README.md  build-arm.sh  build-debug.sh  build-release.sh  build-static.sh  clean.sh  cmake_gen.sh  pack.sh  setvars.sh  win32_release.sh
appli/: CMakeLists.txt
appli/Install Setting/CheckForPatch/: autopatch.c
appli/Install Setting/CheckForUpgrade/: autocheck.c
appli/Install Setting/ffssdaemon/: ffssdaemon.cpp  ffssdaemon.dsp
appli/Install Setting/ffssupdatercfg/: ReadMe.txt  StdAfx.cpp  StdAfx.h  en.txt  ffssupdater.clw  ffssupdater.cpp  ffssupdater.dsp  ffssupdater.h  ffssupdater.rc  ffssupdaterDlg.cpp  ffssupdaterDlg.h  fr.txt  resource.h  stringtable.h
appli/Install Setting/langselect/: LangSelect.cpp  LangSelect.dsp  StdAfx.cpp  StdAfx.h  resource.h  resource.rc
appli/Install Setting/preinstall/: PreInstall.clw  PreInstall.cpp  PreInstall.dsp  PreInstall.h  ReadMe.txt  (+9 more)
appli/Install Setting/preinstall.delphi/: Unit1.dfm  Unit1.pas  preinstall.dpr  preinstall.res
appli/Server-killer/: ffssdkiller.c
appli/client/: CMakeLists.txt
appli/client/cgi/: CMakeLists.txt  Makefile  client.c
appli/client/ffssnetplay/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  client.c  client.h  interface.c  main.c
appli/client/ffssnetplay/src/lib/: Makefile  fnp.c  fnp.h  main.c
appli/client/ffssnetplay/src/lib/fnp/: fnp.dsp
appli/client/gtk/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs
appli/client/gtk/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  client.c  client.h  draw.c  draw.h  interface.c  interface.h  main.c  main.h  support.c
appli/client/gtk/src/ffssclient/: ffssclient.dsp  ffssclient.gtkrc
appli/client/gtk/src/ffssclient/etc/gtk-2.0/: gtk.immodules
appli/client/gtk/src/ffssclient/etc/pango/: pango.modules
appli/client/text/: AUTHORS  BUGS  COPYING  ChangeLog  DONE  FAQ-developpers-client  LISEZMOI  Makefile.am  Makefile.in  QUESTIONS  README  TODO  VERSIONS  config.h.in  configure  configure.in  configure.scan  mkinstalldirs
appli/client/text/data/: Client.conf.sample  Makefile.am  Makefile.in
appli/client/text/doc/: Makefile.am  Makefile.in
appli/client/text/doc/man1/: Makefile.am  Makefile.in  ffss-client.1
appli/client/text/doc/man5/: Makefile  Makefile.am  Makefile.in  ffss-client.conf.5
appli/client/text/src/: Makefile.am  Makefile.in  args.c  args.h  callbacks.c  callbacks.h  cgi_args.c  cgi_args.h  client.c  client.h  command.c  command.h  common.c  common.h  config.c  config.h  datastruct.c  datastruct.h  display.c  display.h  skin.c  skin.h  skin_default.c  skin_default.h  skin_html.c  skin_html.h  skin_html_fleming.c  skin_html_fleming.h  skin_html_playlist.c  skin_html_playlist.h  skin_script.c  skin_script.h
appli/master/: AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.txt  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs  todo.txt
appli/master/src/: CMakeLists.txt  Makefile.am  Makefile.in  build.c  config.c  hosts.c  index.c  index.h  master.c  master.h  search.c  threads.c
appli/master/src/Windows/master/: master.dsp
appli/server/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.in  Plugins.txt  README  aclocal.m4  config.h.in  configure  configure.in  todo.txt
appli/server/data/: Makefile.am  Makefile.in  Server.conf  Server.conf.sample
appli/server/plugins/: Makefile.am  Makefile.in  confconn.c
appli/server/plugins/ConfConn/: ConfConn.conf.sample  Makefile.am  Makefile.in  confconn.c  confconn.h
appli/server/plugins/ConfConn/ConfConn/: ConfConn.dsp  ConfConn.rc  resource.h
appli/server/plugins/HideShare/: hideshare.c  hideshare.h
appli/server/plugins/HideShare/HideShare/: HideShare.dsp
appli/server/plugins/Log/: Makefile.am  Makefile.in  log.c  log.h
appli/server/plugins/Log/Log/: Log.dsp  Log.rc  Makefile.am  Makefile.in  resource.h
appli/server/plugins/TrayConn/: Makefile.am  Makefile.in  trayconn.c  trayconn.h
appli/server/plugins/TrayConn/TrayConn/: Makefile.am  Makefile.in  TrayConn.dsp  TrayConn.rc  resource.h
appli/server/plugins/ipfilter/: StdAfx.cpp  StdAfx.h  common.cpp  common.h  ipfinstall.cpp  ipfinstall.dsp  ipfinstall.ncb  ipfinstall.opt
appli/server/plugins/ipfilter/ipfgui/: AddRuleDlg.cpp  AddRuleDlg.h  ChainPageDlg.cpp  ChainPageDlg.h  ChainsSheet.cpp  ChainsSheet.h  ConfirmDlg.cpp  ConfirmDlg.h  FilterRule.cpp  FilterRule.h  StdAfx.cpp  StdAfx.h  ipfgui.clw  ipfgui.cpp  ipfgui.def  ipfgui.dsp  ipfgui.h  ipfgui.rc  resource.h  strings.cpp  strings.h
appli/server/plugins/ipfilter/ipfgui/res/: ipfgui.rc2
appli/server/src/: CMakeLists.txt  Makefile.am  Makefile.in  arch_dep_unix.c  arch_dep_win.c  conf.c  confapi.c  confapi.h  ffsswho.c  index.c  lexer.c  lexer.l  parser.c  parser.h  parser.y  plugin.c  plugin.h  server.c  server.h  transfer.c
appli/server/src/Windows/: Makefile.am  Makefile.in
appli/server/src/Windows/server/: Makefile.am  Makefile.in  resource.h  server-icon.rc  server.dsp
appli/server/src/Windows/server_console/: server_console.dsp  server_console.dsw
doc/: FAQ-developpers  FAQ-en  INSTALL-en  INSTALL-fr  Protocole_de_partage_de_fichiers.doc  bench.txt  protocol-en.txt  protocol-fr.txt
libffss/: CMakeLists.txt  LICENSE
libffss-1.0.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  ffss-config.in  todo.txt
libffss-1.0.0/src/: Makefile.am  Makefile.in  client.c  common.c  common.h  driver.c  ffss.h  filter.c  kffss.h  master.c  message.c  qos.c  server.c  transfer.c  transfer.h  utils.c  utils.h
libffss-1.0.0/src/Windows/: Makefile.am  Makefile.in
libffss-1.0.0/src/Windows/driver/: Makefile.am  Makefile.in  kffss.dsp
libffss-1.0.0/src/Windows/ffss/: Makefile.am  Makefile.in  ffss.dsp  ffss.dsw
libffss/src/: CMakeLists.txt  client.c  common.c  common.h  driver.c  filter.c  master.c  message.c  qos.c  server.c  transfer.c  transfer.h  utils.c  utils.h
misc/linux/: ffss-master.chk
(+93 files in other folders)
