
bin_PROGRAMS = ffss-client

ffss_client_SOURCES = \
		args.c \
		args.h \
		\
		cgi_args.c \
		cgi_args.h \
		\
		client.c \
		client.h \
		\
		command.c \
		command.h \
		\
		config.c \
		config.h \
		\
		datastruct.c \
		datastruct.h \
		\
		callbacks.c \
		callbacks.h \
		\
		common.c \
		common.h \
		\
		display.c \
		display.h \
		\
		skin.c \
		skin.h \
		\
		skin_default.c \
		skin_default.h \
		\
		skin_script.c \
		skin_script.h \
		\
		skin_html.c \
		skin_html.h \
		\
		skin_html_fleming.c \
		skin_html_fleming.h
